# Parsehub_Snowflake

./: .env copy  .gitignore  API_AUTHORIZATION_FIX.md  CONTRIBUTING.md  GETTING_STARTED.md  K8S_DEPLOYMENT_GUIDE.py  K8S_DEPLOYMENT_READY.md  PROJECT_STRUCTURE.md  Procfile  README.md  REPOSITORY_REORGANIZATION.md  check_progress.py  docker-compose.yml  list_tables.py  migration_log.txt  progress.txt  pyproject.toml  requirements-python312.txt  requirements.txt  sqlite_schema.txt  start_backend.bat  start_backend_sf.bat  start_frontend.bat  test_db_conn.py  vercel.json
.github/workflows/: deploy.yml
backend/: .env  Procfile  analytics_service.py  api_server.py  auto_runner_service.py  database.py  dump_sqlite_schema.py  excel_import_service.py  gen_pg_schema.py  init_postgres.sql  migrate_to_postgres.py  migrate_to_postgres_clean.py  migrate_to_postgres_final.py  nixpacks.toml  requirements.txt
backend/migrations/: MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  migrate_sqlite_to_snowflake.py
backend/src/api/: api_server.py  fetch_projects.py
backend/src/config/: .env.example
backend/src/models/: database.py  init_snowflake.sql  parsehub.db-shm  parsehub.db-wal
backend/src/services/: advanced_analytics.py  analytics.py  analytics_service.py  auto_runner_service.py  auto_sync_service.py  data_ingestion_service.py  excel_import_service.py  incremental_scraping_manager.py  incremental_scraping_scheduler.py  monitoring_service.py  pagination_service.py  recovery_service.py  scheduled_run_service.py  scraping_session_service.py
backend/src/utils/: __init__.py
config/: .env.example
docs/: BACKEND.md  INFRASTRUCTURE.md
docs/deployment/: DOCKER_BUILD_GUIDE.md  KUBERNETES_DEPLOYMENT_GUIDE.md  TROUBLESHOOTING.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: page.tsx
frontend/app/api/: _proxy.ts
frontend/app/import-metadata/: page.tsx
frontend/app/projects/: page.tsx
frontend/components/: AllProjectsAnalyticsModal.tsx  CSVDataModal.tsx  ColumnStatisticsModal.tsx  Header.tsx  ProjectsList.tsx
frontend/lib/: api.ts  apiBase.ts  apiClient.ts  useRealTimeMonitoring.ts
infrastructure/: README.md
infrastructure/docker/: Dockerfile-backend  Dockerfile-frontend
infrastructure/kubernetes/: k8s-backend-deployment.yaml
infrastructure/kubernetes/base/: backend-deployment.yaml  backend-service.yaml  configmaps.yaml  frontend-deployment.yaml  frontend-service.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secrets.yaml
infrastructure/kubernetes/scripts/: cleanup.sh  deploy.sh  (+1 more)
(+25 files in other folders)
